<resources>

    <string name="packageName">fitnessgods.udacity.com.fitnessgods</string>
    <string name="app_name">FitnessGods</string>
    <string name="main">Workouts</string>
    <string name="workout">Personal Workouts</string>
    <string name="about">About Us</string>
    <string name="title_activity_login">Sign in</string>

    <string name="action_logout">Logout</string>

    <string name="social_accounts">Login with social accounts</string>
    <string name="googleIcon">Google+</string>
    <string name="google">Google</string>
    <string name="facebookIcon">Facebook</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- FireBase reference names -->
    <string name="user_info">user_information</string>

    <!-- Registration Page -->
    <string name="lable_register">REGISTER</string>
    <string name="text_email">Email</string>
    <string name="text_pass">Password</string>
    <string name="text_confirmpass">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="already_member">Already a member ? Login Here</string>
    <!-- Login Page -->
    <string name="text_email_login">Email</string>
    <string name="text_pass_login">Password</string>
    <string name="btn_login">Login</string>
    <string name="new_member">New Member ? Signup </string>

    <!-- Login Page Facebook-->
    <string name="facebook_app_id">259563184818834</string>
    <string name="fb_login_protocol_scheme">fb259563184818834</string>

    <string name="workout_name">WORKOUT</string>
    <string name="workout_poster_desc">Workout Image</string>
    <string name="exercise_name">Exrcice</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="new_workout">Create New Workout</string>

    <string name="delete">DELETE</string>

    <string name="version">Version : 1.0</string>
    <string name="developer">Developer : Amir Mattar</string>
    <string name="mymail">amir86mattar@gmail.com</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="longClick">Long click on any item for delete</string>
    <string name="swipefordelete">Swipe any item to delete</string>

    <string name="customWorkoutSelect">Select custom workout from your list</string>
    <string name="customWorkoutRecycler">Custom Workouts</string>
    <string name="fitnessGodsLogo">Fitness Gods Logo</string>
    <string name="backgroundImage">Background Image</string>
    <string name="Developer">Developer Name - Amir Mattar</string>
    <string name="Version">App Version 1.0</string>
    <string name="EmailAddress">App Email Address : amir86mattar@gmail.com</string>
    <string name="swipeDescription">Swipe any item to delete</string>
    <string name="favorite">Add to favorite button</string>
    <string name="share_using">Share using...</string>
    <string name="no_app_available_to_share_content">No app available to share content !</string>
    <string name="no_video_default_image">Default Image</string>
    <string name="text_steps">Steps</string>

    <string name="empty">Fields are empty.</string>
    <string name="login_problem">Problem With Login.</string>
    <string name="authenticating">Authenticating..</string>
    <string name="signInResultfailed">signInResult:failed code=</string>
    <string name="registering">Registering , Please Wait ...</string>
    <string name="RegistrationSuccessful">Registration Successful.</string>
    <string name="incorrectInputs">One of your inputs is incorrect.</string>

    <string name="exercise">Exercise</string>
    <string name="customName">Workout Custom Name</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="customNameNotEmpty">Custom name must not be empty!</string>
    <string name="loaderNotImplemented">Loader Not Implemented: </string>
    <string name="unknownUri">Unknown uri: </string>
    <string name="removeFromWorkouts"> removed from workouts!</string>
    <string name="undo">Undo</string>
    <string name="uriCannotBeNull">URI cannot be null</string>
    <string name="exerciseAdded">Exercise has been added to folder </string>
    <string name="exerciseAlreadyAdded">Exercise already added to  </string>
    <string name="folder"> folder</string>
    <string name="selectCustomWorkout">Select Custom Workout</string>
    <string name="noAvailableIntent">No Intent available to handle action</string>
    <string name="areYouSureToRemoveWorkout">Are you sure that you want to remove this workout ?</string>
    <string name="selectWorkout">Select a new Custom Workout</string>
    <string name="pleaseAddCustom">Please add a custom workout to mark a favorite</string>

</resources>
